--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -19,10 +19,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'DataFrame'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-5a74f1540065>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mDataFrame\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'DataFrame'"
+     ]
+    }
+   ],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import DataFrame as df"
    ]
   },
   {
@@ -94,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronauts = pd.read_excel('Untitled Folder/astronauts.xls')"
    ]
   },
   {
@@ -111,12 +125,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Birth Date</th>\n",
+       "      <th>Birth Place</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Alma Mater</th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Graduate Major</th>\n",
+       "      <th>Military Rank</th>\n",
+       "      <th>Military Branch</th>\n",
+       "      <th>Space Flights</th>\n",
+       "      <th>Space Flight (hr)</th>\n",
+       "      <th>Space Walks</th>\n",
+       "      <th>Space Walks (hr)</th>\n",
+       "      <th>Missions</th>\n",
+       "      <th>Death Date</th>\n",
+       "      <th>Death Mission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joseph M. Acaba</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>1967-05-17</td>\n",
+       "      <td>Inglewood, CA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of California-Santa Barbara; Univer...</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3307</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>STS-119 (Discovery), ISS-31/32 (Soyuz)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Loren W. Acton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1936-03-07</td>\n",
+       "      <td>Lewiston, MT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Montana State University; University of Colorado</td>\n",
+       "      <td>Engineering Physics</td>\n",
+       "      <td>Solar Physics</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS 51-F (Challenger)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James C. Adamson</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1946-03-03</td>\n",
+       "      <td>Warsaw, NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; Princeton University</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Aerospace Engineering</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Army (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS-28 (Columbia), STS-43 (Atlantis)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thomas D. Akers</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1951-05-20</td>\n",
+       "      <td>St. Louis, MO</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of Missouri-Rolla</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Applied Mathematics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>4</td>\n",
+       "      <td>814</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Buzz Aldrin</td>\n",
+       "      <td>1963.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1930-01-20</td>\n",
+       "      <td>Montclair, NJ</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; MIT</td>\n",
+       "      <td>Mechanical Engineering</td>\n",
+       "      <td>Astronautics</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Air Force (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>289</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Gemini 12, Apollo 11</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Name    Year  Group   Status Birth Date    Birth Place Gender  \\\n",
+       "0   Joseph M. Acaba  2004.0   19.0   Active 1967-05-17  Inglewood, CA   Male   \n",
+       "1    Loren W. Acton     NaN    NaN  Retired 1936-03-07   Lewiston, MT   Male   \n",
+       "2  James C. Adamson  1984.0   10.0  Retired 1946-03-03     Warsaw, NY   Male   \n",
+       "3   Thomas D. Akers  1987.0   12.0  Retired 1951-05-20  St. Louis, MO   Male   \n",
+       "4       Buzz Aldrin  1963.0    3.0  Retired 1930-01-20  Montclair, NJ   Male   \n",
+       "\n",
+       "                                          Alma Mater     Undergraduate Major  \\\n",
+       "0  University of California-Santa Barbara; Univer...                 Geology   \n",
+       "1   Montana State University; University of Colorado     Engineering Physics   \n",
+       "2          US Military Academy; Princeton University             Engineering   \n",
+       "3                       University of Missouri-Rolla     Applied Mathematics   \n",
+       "4                           US Military Academy; MIT  Mechanical Engineering   \n",
+       "\n",
+       "          Graduate Major Military Rank         Military Branch  Space Flights  \\\n",
+       "0                Geology           NaN                     NaN              2   \n",
+       "1          Solar Physics           NaN                     NaN              1   \n",
+       "2  Aerospace Engineering       Colonel       US Army (Retired)              2   \n",
+       "3    Applied Mathematics       Colonel  US Air Force (Retired)              4   \n",
+       "4           Astronautics       Colonel  US Air Force (Retired)              2   \n",
+       "\n",
+       "   Space Flight (hr)  Space Walks  Space Walks (hr)  \\\n",
+       "0               3307            2              13.0   \n",
+       "1                190            0               0.0   \n",
+       "2                334            0               0.0   \n",
+       "3                814            4              29.0   \n",
+       "4                289            2               8.0   \n",
+       "\n",
+       "                                            Missions Death Date Death Mission  \n",
+       "0             STS-119 (Discovery), ISS-31/32 (Soyuz)        NaT           NaN  \n",
+       "1                              STS 51-F (Challenger)        NaT           NaN  \n",
+       "2               STS-28 (Columbia), STS-43 (Atlantis)        NaT           NaN  \n",
+       "3  STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...        NaT           NaN  \n",
+       "4                               Gemini 12, Apollo 11        NaT           NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronauts.head()"
    ]
   },
   {
@@ -128,12 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                 Year    Group  Status    Birth Date  Birth Place      Gender  Alma Mater                                                              Undergraduate Major     Graduate Major                              Military Rank       Military Branch  Space Flights  Space Flight (hr)  Space Walks  Space Walks (hr)  Missions                                     Death Date  Death Mission        \n",
+       "William C. McCool    1996.0  16.0   Deceased  1961-09-23  San Diego, CA    Male    US Naval Academy; University of Maryland; US Naval Postgraduate School  Naval Sciences          Computer Science; Aeronautical Engineering  Commander           US Navy          1              382                0            0.0               STS-107 (Columbia)                           2003-02-01  STS-107 (Columbia)       1\n",
+       "Rick D. Husband      1995.0  15.0   Deceased  1957-07-12  Amarillo, TX     Male    Texas Tech University; California State University                      Mechanical Engineering  Mechanical Engineering                      Colonel             US Air Force     2              617                0            0.0               STS-96 (Discovery), STS-107 (Columbia)       2003-02-01  STS-107 (Columbia)       1\n",
+       "Michael P. Anderson  1995.0  15.0   Deceased  1959-12-25  Plattsburgh, NY  Male    University of Washington; Creighton University                          Physics & Astronomy     Physics                                     Lieutenant Colonel  US Air Force     2              594                0            0.0               STS-89 (Endeavor), STS-107 (Columbia)        2003-02-01  STS-107 (Columbia)       1\n",
+       "Michael J. Smith     1980.0  9.0    Deceased  1945-04-30  Beaufort, NC     Male    US Naval Academy; US Naval Postgraduate School                          Naval Sciences          Aeronautical Engineering                    Captain             US Navy          1              0                  0            0.0               STS 51-L (Challenger)                        1986-01-28  STS 51-L (Challenger)    1\n",
+       "Laurel B. Clark      1996.0  16.0   Deceased  1961-03-10  Ames, IA         Female  University of Wisconsin-Madison                                         Zoology                 Medicine                                    Captain             US Navy          1              382                0            0.0               STS-107 (Columbia)                           2003-02-01  STS-107 (Columbia)       1\n",
+       "Ellison S. Onizuka   1978.0  8.0    Deceased  1946-06-24  Kealakekua, HI   Male    University of Colorado                                                  Aerospace Engineering   Aerospace Engineering                       Lieutenant Colonel  US Air Force     2              73                 0            0.0               STS 51-C (Discovery), STS 51-L (Challenger)  1986-01-28  STS 51-L (Challenger)    1\n",
+       "David M. Brown       1996.0  16.0   Deceased  1956-04-16  Arlington, VA    Male    College of William & Mary; Eastern Virginia Medical School              Biology                 Medicine                                    Captain             US Navy          1              382                0            0.0               STS-107 (Columbia)                           2003-02-01  STS-107 (Columbia)       1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronauts.value_counts()"
    ]
   },
   {
@@ -145,12 +377,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut = astronauts.to_csv('astronauts.xls', sep=',', index=False)"
    ]
   },
   {
@@ -169,7 +401,7 @@
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "new_url =\n"
    ]
   }
  ],
@@ -189,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
