--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -22,12 +22,12 @@
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       55  0   81  0.1  -6  11  25   88   64  4\n",
+      "0      56  0   96    0  52  -4  40   44    4  4\n",
+      "1      50 -1   89   -7  50   0  39   40    2  1\n",
+      "2      53  9   79    0  42  -2  25   37   12  4\n",
+      "3      55  2   82    0  54  -6  26   28    2  1\n",
+      "4      41  0   84    3  38  -4  43   45    2  1\n",
+      "...    .. ..  ...  ...  ..  ..  ..  ...  ... ..\n",
+      "14494  80  0   84    0 -36 -29   4  120  116  5\n",
+      "14495  55  0   81    0 -20  25  26  102   76  4\n",
+      "14496  55  0   77    0  12 -22  22   65   42  4\n",
+      "14497  37  0  103    0  18 -16  66   85   20  1\n",
+      "14498  56  2   98    0  52   1  42   46    4  4\n",
+      "\n",
+      "[14499 rows x 10 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url, sep=' ')\n",
+    "print(shuttle)\n",
+    "\n",
+    "cols = ['time', 'rad_flow', 'fpv_close', 'fpv_open', 'high', 'bypass', 'bpv_close', 'bpv_open', 'class', 'name']\n",
+    "shuttle.columns = cols\n"
    ]
   },
   {
@@ -56,12 +81,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+      "0    56         0         96         0    52      -4         40        44   \n",
+      "1    50        -1         89        -7    50       0         39        40   \n",
+      "2    53         9         79         0    42      -2         25        37   \n",
+      "\n",
+      "   class  name  \n",
+      "0      4     4  \n",
+      "1      2     1  \n",
+      "2     12     4  \n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "print(shuttle.head(3))\n"
    ]
   },
   {
@@ -73,11 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "data = shuttle.to_csv('shuttle.csv', index=True)\n",
+    "\n",
     "\n"
    ]
   },
@@ -94,11 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
+    "astronaut = pd.read_excel('astronauts.xls')\n",
+    "\n",
     "\n"
    ]
   },
@@ -111,11 +156,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Birth Date</th>\n",
+       "      <th>Birth Place</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Alma Mater</th>\n",
+       "      <th>Undergraduate Major</th>\n",
+       "      <th>Graduate Major</th>\n",
+       "      <th>Military Rank</th>\n",
+       "      <th>Military Branch</th>\n",
+       "      <th>Space Flights</th>\n",
+       "      <th>Space Flight (hr)</th>\n",
+       "      <th>Space Walks</th>\n",
+       "      <th>Space Walks (hr)</th>\n",
+       "      <th>Missions</th>\n",
+       "      <th>Death Date</th>\n",
+       "      <th>Death Mission</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Joseph M. Acaba</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>1967-05-17</td>\n",
+       "      <td>Inglewood, CA</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>University of California-Santa Barbara; Univer...</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>Geology</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3307</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>STS-119 (Discovery), ISS-31/32 (Soyuz)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Loren W. Acton</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1936-03-07</td>\n",
+       "      <td>Lewiston, MT</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Montana State University; University of Colorado</td>\n",
+       "      <td>Engineering Physics</td>\n",
+       "      <td>Solar Physics</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>190</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS 51-F (Challenger)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>James C. Adamson</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>1946-03-03</td>\n",
+       "      <td>Warsaw, NY</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>US Military Academy; Princeton University</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>Aerospace Engineering</td>\n",
+       "      <td>Colonel</td>\n",
+       "      <td>US Army (Retired)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>334</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>STS-28 (Columbia), STS-43 (Atlantis)</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Name    Year  Group   Status Birth Date    Birth Place Gender  \\\n",
+       "0   Joseph M. Acaba  2004.0   19.0   Active 1967-05-17  Inglewood, CA   Male   \n",
+       "1    Loren W. Acton     NaN    NaN  Retired 1936-03-07   Lewiston, MT   Male   \n",
+       "2  James C. Adamson  1984.0   10.0  Retired 1946-03-03     Warsaw, NY   Male   \n",
+       "\n",
+       "                                          Alma Mater  Undergraduate Major  \\\n",
+       "0  University of California-Santa Barbara; Univer...              Geology   \n",
+       "1   Montana State University; University of Colorado  Engineering Physics   \n",
+       "2          US Military Academy; Princeton University          Engineering   \n",
+       "\n",
+       "          Graduate Major Military Rank    Military Branch  Space Flights  \\\n",
+       "0                Geology           NaN                NaN              2   \n",
+       "1          Solar Physics           NaN                NaN              1   \n",
+       "2  Aerospace Engineering       Colonel  US Army (Retired)              2   \n",
+       "\n",
+       "   Space Flight (hr)  Space Walks  Space Walks (hr)  \\\n",
+       "0               3307            2              13.0   \n",
+       "1                190            0               0.0   \n",
+       "2                334            0               0.0   \n",
+       "\n",
+       "                                 Missions Death Date Death Mission  \n",
+       "0  STS-119 (Discovery), ISS-31/32 (Soyuz)        NaT           NaN  \n",
+       "1                   STS 51-F (Challenger)        NaT           NaN  \n",
+       "2    STS-28 (Columbia), STS-43 (Atlantis)        NaT           NaN  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
+    "astronaut.head(3)\n",
+    "\n",
     "\n"
    ]
   },
@@ -128,12 +320,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Physics                                                                35\n",
+       "Aerospace Engineering                                                  33\n",
+       "Mechanical Engineering                                                 30\n",
+       "Aeronautical Engineering                                               28\n",
+       "Electrical Engineering                                                 23\n",
+       "                                                                       ..\n",
+       "Industrial Engineering                                                  1\n",
+       "Aeronautics & Astronautics; Earth, Atmospheric & Planetary Sciences     1\n",
+       "Solid Earth Sciences                                                    1\n",
+       "Mathematics; Russian                                                    1\n",
+       "Computer & Systems Engineering                                          1\n",
+       "Name: Undergraduate Major, Length: 83, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut[\"Undergraduate Major\"].value_counts()\n"
    ]
   },
   {
@@ -145,12 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut.reset_index(drop=True, inplace=True)\n",
+    "data =astronaut.to_csv('astronaut.csv', sep='\\t')\n"
    ]
   },
   {
@@ -189,9 +404,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
